--- a/index.html
+++ b/index.html
@@ -8,7 +8,21 @@
   <body>
     <h1>weather app</h1>
     <footer>
-      <p>it is built by dzhivhuho netshedzo</p>
+      <p>
+        Coded by
+        <a href="https://github.com/netshedz" target="_blank"
+          >Dzhivhuho Netshedzo</a
+        >. Code hosted on
+        <a
+          href="https://github.com/netshedz/weather-App-project"
+          target="_blank"
+          >GitHub</a
+        >
+        and website hosted on
+        <a href="https://netshedzo-weather-app.netlify.app" target="_blank"
+          >Netlify</a
+        >
+      </p>
     </footer>
   </body>
 </html>
