styled the main container

--- a/index.html
+++ b/index.html
@@ -3,26 +3,51 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="src/styles.css" />
     <title>weather application</title>
   </head>
   <body>
-    <h1>weather app</h1>
-    <footer>
-      <p>
-        Coded by
-        <a href="https://github.com/netshedz" target="_blank"
-          >Dzhivhuho Netshedzo</a
-        >. Code hosted on
-        <a
-          href="https://github.com/netshedz/weather-App-project"
-          target="_blank"
-          >GitHub</a
-        >
-        and website hosted on
-        <a href="https://netshedzo-weather-app.netlify.app" target="_blank"
-          >Netlify</a
-        >
-      </p>
-    </footer>
+    <div class="Container">
+      <header>
+        <form>
+          <input type="search" placeholder="Enter a city.." required />
+          <input type="submit" value="Search" />
+        </form>
+      </header>
+      <main>
+        <div>
+          <h1>Paris</h1>
+          <p>
+            <span> Saturday 15 june 2024, 18:30 </span>
+          </p>
+        </div>
+        <div>
+          <p>
+            Sunny <br />
+            Humidity: <strong>87%</strong>, Wind: <strong>7.2km/h</strong>
+          </p>
+        </div>
+        <div>
+          <aside>☀️24°C</aside>
+        </div>
+      </main>
+      <footer>
+        <p>
+          Coded by
+          <a href="https://github.com/netshedz" target="_blank"
+            >Dzhivhuho Netshedzo</a
+          >. Code hosted on
+          <a
+            href="https://github.com/netshedz/weather-App-project"
+            target="_blank"
+            >GitHub</a
+          >
+          and website hosted on
+          <a href="https://netshedzo-weather-app.netlify.app" target="_blank"
+            >Netlify</a
+          >
+        </p>
+      </footer>
+    </div>
   </body>
 </html>
