--- a/index.html
+++ b/index.html
@@ -9,26 +9,33 @@
   <body>
     <div class="Container">
       <header>
-        <form>
-          <input type="search" placeholder="Enter a city.." required />
-          <input type="submit" value="Search" />
+        <form class="search-form">
+          <input
+            type="search"
+            placeholder="Enter a city.."
+            required
+            class="search-bar"
+          />
+          <input type="submit" value="Search" class="search-button" />
         </form>
       </header>
       <main>
-        <div>
+        <div class="cities">
           <h1>Paris</h1>
-          <p>
-            <span> Saturday 15 june 2024, 18:30 </span>
-          </p>
+          <p>Saturday 15 june 2024, 18:30</p>
         </div>
-        <div>
-          <p>
-            Sunny <br />
-            Humidity: <strong>87%</strong>, Wind: <strong>7.2km/h</strong>
-          </p>
-        </div>
-        <div>
-          <aside>☀️24°C</aside>
+        <div class="weather">
+          <div class="weather-details">
+            <p>
+              Sunny <br />
+              Humidity: <strong>87%</strong>, Wind: <strong>7.2km/h</strong>
+            </p>
+          </div>
+          <div class="current-temperature">
+            <span class="current-temperature-icon">☀️</span
+            ><span class="current-temperature-value">24</span
+            ><span class="current-temperature-unit">°C</span>
+          </div>
         </div>
       </main>
       <footer>
