Added search functionality using the API

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </header>
       <main>
         <div class="cities">
-          <h1 id="city">Paris</h1>
+          <h1 id="city"></h1>
           <p>Saturday 15 june 2024, 18:30</p>
         </div>
         <div class="weather">
@@ -35,7 +35,7 @@
           </div>
           <div class="current-temperature">
             <span class="current-temperature-icon">☀️</span
-            ><span class="current-temperature-value">24</span
+            ><span class="current-temperature-value" id="temperature"></span
             ><span class="current-temperature-unit">°C</span>
           </div>
         </div>
