Added more weather data

--- a/index.html
+++ b/index.html
@@ -24,13 +24,14 @@
       <main>
         <div class="cities">
           <h1 id="city"></h1>
-          <p>Saturday 15 june 2024, 18:30</p>
+          <p id="time">Saturday 15 june 2024, 18:30</p>
         </div>
         <div class="weather">
           <div class="weather-details">
             <p>
-              Sunny <br />
-              Humidity: <strong>87%</strong>, Wind: <strong>7.2km/h</strong>
+              <span id="description"></span> <br />
+              Humidity: <strong id="humidity"></strong>, Wind:
+              <strong id="wind-speed">7.2km/h</strong>
             </p>
           </div>
           <div class="current-temperature">
