finished adding more data on the index.html file , CSS file and index.js file

--- a/index.html
+++ b/index.html
@@ -29,13 +29,14 @@
         <div class="weather">
           <div class="weather-details">
             <p>
-              <span id="description"></span> <br />
+              <span id="description"></span>
+              <br />
               Humidity: <strong id="humidity"></strong>, Wind:
               <strong id="wind-speed">7.2km/h</strong>
             </p>
           </div>
           <div class="current-temperature">
-            <span class="current-temperature-icon">☀️</span
+            <span> <div id="icons"></div> </span
             ><span class="current-temperature-value" id="temperature"></span
             ><span class="current-temperature-unit">°C</span>
           </div>
